# GTO

./: Cargo.toml  DOCUMENTATION.md
crates/gto-abstraction/: Cargo.toml
crates/gto-abstraction/src/: lib.rs
crates/gto-cfr/: Cargo.toml
crates/gto-cfr/src/: cfr.rs  info_set.rs  lib.rs  strategy.rs  trainer.rs
crates/gto-core/: Cargo.toml
crates/gto-core/src/: action.rs  card.rs  game_state.rs  iso.rs  lib.rs
crates/gto-eval/: Cargo.toml
crates/gto-eval/benches/: eval_bench.rs
crates/gto-eval/src/: equity.rs  evaluator.rs  hand_rank.rs  lib.rs  range_equity.rs
crates/gto-games/: Cargo.toml
crates/gto-games/benches/: cfr_bench.rs
crates/gto-games/src/: kuhn.rs  leduc.rs  lib.rs  postflop.rs  preflop.rs  push_fold.rs
docs/: roadmap-to-piosolver.md
src/: main.rs
src/web/: handlers.rs  server.rs  state.rs
static/: index.html
