[package]
name = "gto-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
gto-core = { path = "../gto-core" }
rand = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
rand_chacha = { workspace = true }
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "eval_bench"
harness = false
